Added css to the button and textbox

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <textarea placeholder="Write anything here..."></textarea>
         <div class="row">
             <select></select>
-            <button>Listen</button>
+            <button><img src="./images/icons8-play-64.png"></button>
         </div>
     </div>   
 </body>
