--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
             <button><img src="./images/icons8-play-64.png"></button>
         </div>
     </div>   
+<script src="script.js"></script>
 </body>
 </html>
